# cppws

./: .gitignore  CMakeLists.txt  README.md
cmake/: update-dependencies.cmake
cmake/fetch-content-dependencies/: googletest.cmake  nlohmann-json.cmake  spdlog.cmake
docs/: arch.md
docs/api-suggestions/: process-requests.md
src/: cppws.cpp  http_request.cpp  request_processor.cpp  socket.cpp  url.cpp
src/include/cppws/: http_def.hpp  http_request.hpp  http_response.hpp  request_processor.hpp  socket.hpp  socket_stream.hpp  url.hpp
test/: CMakeLists.txt  http_request_test.cpp  http_response.cpp  test.cpp  url_test.cpp
utils/: cmake-add-dependency  cmake-add-dependency-defaults.json  cmake-boot
